# tbb-cc-jobs

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VS_2022.bat  VS_Code.bat
.github/workflows/: snapshot.yml
cmake/: CompileOptions.cmake  Dependencies.cmake  SourceLists.cmake  Tests.cmake
include/mod/: mod.hpp
src/: main.cpp
src/mod/: mod.cpp
test/: test.cpp
